--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,10 @@ dependencies:
   esc_pos_utils: ^1.1.0
   # esc_pos_utils:
   # path: ../esc_pos_utils
-  flutter_bluetooth_basic: ^0.1.7
-
+  flutter_bluetooth_basic:
+    git:
+      url: https://github.com/samuelvasecka/flutter_bluetooth_basic
+      
 dev_dependencies:
   flutter_test:
     sdk: flutter
