--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   esc_pos_utils: ^1.1.0
   # esc_pos_utils:
   # path: ../esc_pos_utils
-  flutter_bluetooth_basic_v2: 0.0.3
+  flutter_bluetooth_basic_v2:
+    git:
+      url: https://github.com/Miko2x/flutter_bluetooth_basic_v2
       
 dev_dependencies:
   flutter_test:
